add title to the head

--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Shore You Go or Knot?</title>
         <style>
             .container {
              position: relative;
