--- a/homepage.html
+++ b/homepage.html
@@ -273,7 +273,7 @@
         }
 
         var map = new mapboxgl.Map({
-            container: 'map',
+            container: 'intro_map',
             style: config.style,
             center: config.chapters[0].location.center,
             zoom: config.chapters[0].location.zoom,
