added willapa bay and vectorized 1860

--- a/homepage.html
+++ b/homepage.html
@@ -202,7 +202,7 @@
 
         <div id="intro_map"></div>
         <div id="story" ></div>
-        <div id="test_box"><h1>fjlshfjkshfksjnkjfsdjkhfldsjflhslhjfslkfjhldsd</h1></div>
+        <div id="test_box"><h1>TEST</h1></div>
         
 
         <script src="js/config.js"></script>
