--- a/test_geojson_mapping.html
+++ b/test_geojson_mapping.html
@@ -103,6 +103,7 @@ body {
             'id': 'coastline_2016',
             'type': 'line',
             'source': 'coastline_2016',
+            'layout':{'visibility':'none'},
             'paint': {
                 'line-color': '#000000',
                 'line-width':2},  //color black 2016 coastline
