--- a/coastline_1700.html
+++ b/coastline_1700.html
@@ -2,21 +2,24 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Load data from an external GeoJSON file</title>
+<title>Visualize 1700 Holocene shoreline</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
 <style>
 body { 
-                margin: 0;
-                padding: 0; 
-            }
-            #map {position:absolute;
-                top: 0;
+        margin: 0;
+        padding: 0; 
+    }
+
+#map {
+    position:absolute;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-             width: 100%; }
+    width: 100%; 
+    }
 </style>
 </head>
 
