changed shoreilne color from black to red

--- a/animation_historical_shoreline.html
+++ b/animation_historical_shoreline.html
@@ -92,14 +92,14 @@ background: #3074a4;
 
     <script>
         //The coordinates where the year label is displayed
-        const coordinatesYear=[-124.1788,46.9152]
+        const coordinatesYear=[-124.2465,46.8398]
 
-        //color the shorelines BLACK
-        const shorelineColor = '#000000';
+        //color the shorelines RED
+        const shorelineColor = '#FF0000';
 
         const shorelineWidth = 3;
         //the font size of the years
-        const textSize = 26;
+        const textSize = 60;
         //create a json to store the information of the year shown
         const displayYear1700 = {
             'type': 'FeatureCollection',
