--- a/coastline_1700.html
+++ b/coastline_1700.html
@@ -46,7 +46,7 @@ body {
             'type':'line',
             'source': "data",
             'paint':{
-                'line-color':'#000000',
+                'line-color':'#FF0000',
                 'line-width':2
             },
         });
