changed shoreline color to blue

--- a/animation_mehak.html
+++ b/animation_mehak.html
@@ -175,7 +175,7 @@
         // etc.
 
 
-        const shorelineColor = '#FF0000';   //red
+        const shorelineColor = '#0000FF';   //blue
 
         const textSize = 30;
 
