nav style, frontpage, and two columns

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <div id="loader"></div>
 
-    <nav class="navbar fixed-top navbar-expand-lg bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg" style="background-color: transparent;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./">
+        <a class="navbar-brand" href="./" style="color: #154778;">
           <img src="img/nsf_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-          Homepage
+          <strong>Homepage</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -99,26 +99,36 @@
         </div>
 
         <div id="introText">
-            <h1 class="text-center"><strong>Geonarrative Part <span>&#8545;</span></strong>: The Continuing Adaptation to South Beach's Shifting Shore</h1>
-            <!-- <h5 class="text-center"><i>this line is a place holder for subtitle</i></h5> -->
-            <p style="text-align:justify">
-                The South Beach area of Grays Harbor County, Washington,
-                is a dynamic coastal environment that has been shaped by the forces of nature and
-                the actions of humans. The area has been home to the Quinault Indian Nation for
-                thousands of years. The Quinault people have adapted to the changing
-                landscape and have developed a deep understanding of the natural processes that shape
-                the area. <br> <br> White settlers arrived in this area in the 1800s. Even though they
-                have experienced significant changes in coastal environment since then as well, their presence
-                on this land is still transient and there is much to learn from the Quinault people about the history of the area and how to adapt. <br> <br>
-                This Geo-narrative narrates the evolution of South Beach coastal environment. As we lay out
-                scenarios of shifting shores in this storytelling, we hope to inspire you to think about how both you and your community as a whole can adapt and thrive in the face of an uncertain and challenging future.
-            </p>
-            <div class="footnote text-right">
-                <span>This project was funded by National Science Foundation award #190024</span>
-                <a target="_blank" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1940024"> <img src="img/nsf_logo.png" width="40px" style="vertical-align: middle;" /></a>
-                <a target="_blank" href="https://www.uw.edu"> <img src="img/uw_logo.png" width="40px" style="vertical-align: middle;  margin-top: 6px;" /></a>
+            <div class="flex-column" style="padding-right: 10px;">
+                <h1 style="text-align: left;"><strong>Geonarrative Part <span>&#8545;</span></strong>: The Continuing Adaptation to South Beach's Shifting Shore</h1>
+                <!-- <h5 class="text-center"><i>this line is a place holder for subtitle</i></h5> -->
+                <div class="footnote">
+                    <span>This project was funded by National Science Foundation award #190024</span>
+                    <a target="_blank" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1940024"> <img src="img/nsf_logo.png" width="40px" style="vertical-align: middle;" /></a>
+                    <a target="_blank" href="https://www.uw.edu"> <img src="img/uw_logo.png" width="40px" style="vertical-align: middle;  margin-top: 6px;" /></a>
 
+                </div>
             </div>
+            <div class="flex-column" style="justify-content: space-between;">
+                <p style="text-align:justify">
+                    The South Beach area of Grays Harbor County, Washington,
+                    is a dynamic coastal environment that has been shaped by the forces of nature and
+                    the actions of humans. The area has been home to the Quinault Indian Nation for
+                    thousands of years. The Quinault people have adapted to the changing
+                    landscape and have developed a deep understanding of the natural processes that shape
+                    the area.
+                </p>
+                <p style="text-align:justify">
+                    White settlers arrived in this area in the 1800s. Even though they
+                    have experienced significant changes in coastal environment since then as well, their presence
+                    on this land is still transient and there is much to learn from the Quinault people about the history of the area and how to adapt.
+                </p>
+                <p style="text-align:justify">
+                    This Geo-narrative narrates the evolution of South Beach coastal environment. As we lay out
+                    scenarios of shifting shores in this storytelling, we hope to inspire you to think about how both you and your community as a whole can adapt and thrive in the face of an uncertain and challenging future.
+                </p>
+            </div>
+
         </div>
     </section>
 
@@ -130,34 +140,37 @@
             Washington's coast is increasingly threatened by climate change and geological hazards. You may have heard about terms like "sea level rise", "global warming", "earthquake", "tsunami" from the Internet, from news media, from your community leaders... But do you really understand these terms? Like, what are their relationships with climate change and geological hazards? And more importantly, what are their impacts on South Beach communities?
 
         </p>
-        <section class="column">
-            <h3>Climate Change</h3>
-            <p>
-                <strong>Global warming</strong> refers specifically to the long-term increase in Earth's average surface temperature, primarily due to human activities such as burning fossil fuels, deforestation, and industrial processes.
-            </p>
-            <p>
-                <strong>Climate change</strong>, on the other hand, encompasses a broader range of changes in Earth's climate system, including not only rising temperatures but also shifts in precipitation patterns, extreme weather events, <strong>sea level rise</strong>, and so on.
-            </p>
-            <p>
-                Mounting evidence has suggested that the sea level is rising globally, and the sea level rise is accelerating due to the worsening climate change and global warming. Impacts of sea level rise includes erosion of beaches, inundation of deltas, salinity of water. <span class="underline"><strong>The South Beach coastal communities are at the frontline</strong></span>.
-            </p>
-        </section>
-        <section class="column">
-            <h3>Geological Hazards</h3>
-            <p style="padding-bottom: 10px;">
-                South Beach communities sit on the Cascadia Subduction Zone, which is a ticking bomb of <strong>earthquakes</strong> and <strong>tsunamis</strong>.
-            </p>
-            <figure>
-                <img src="img/csz.png" alt="Cascadia Subduction Zone" class="ctr-img">
-                <figcaption>
-                    Cascadia Subduction Zone.
-                    <a href="https://pnsn.org/outreach/earthquakesources/csz"> Credit: PNSN</a>
-                </figcaption>
-            </figure>
-            <p style="padding-top: 10px;">
-                The last subduction zone earthquake happened in 1700. More than 300 years of peace does not indicate safety. Geological evidence shows that the subduction zone earthquake has a recurrence rate of ~500 years. It has been silently amassing energy for the next earthquake. <strong>It will come again!</strong> Ground shaking and tsunami waves may wreck havoc on the shore.
-            </p>
 
+        <section class="flex-row" style="margin-left: 15px; margin-right: 15px;">
+            <section style="width: 50%;">
+                <h3>Climate Change</h3>
+                <p>
+                    <strong>Global warming</strong> refers specifically to the long-term increase in Earth's average surface temperature, primarily due to human activities such as burning fossil fuels, deforestation, and industrial processes.
+                </p>
+                <p>
+                    <strong>Climate change</strong>, on the other hand, encompasses a broader range of changes in Earth's climate system, including not only rising temperatures but also shifts in precipitation patterns, extreme weather events, <strong>sea level rise</strong>, and so on.
+                </p>
+                <p>
+                    Mounting evidence has suggested that the sea level is rising globally, and the sea level rise is accelerating due to the worsening climate change and global warming. Impacts of sea level rise includes erosion of beaches, inundation of deltas, salinity of water. <span class="underline"><strong>The South Beach coastal communities are at the frontline</strong></span>.
+                </p>
+            </section>
+            <section style="width: 50%;">
+                <h3>Geological Hazards</h3>
+                <p style="padding-bottom: 10px;">
+                    South Beach communities sit on the Cascadia Subduction Zone, which is a ticking bomb of <strong>earthquakes</strong> and <strong>tsunamis</strong>.
+                </p>
+                <figure>
+                    <img src="img/csz.png" alt="Cascadia Subduction Zone" class="ctr-img">
+                    <figcaption>
+                        Cascadia Subduction Zone.
+                        <a href="https://pnsn.org/outreach/earthquakesources/csz"> Credit: PNSN</a>
+                    </figcaption>
+                </figure>
+                <p style="padding-top: 10px;">
+                    The last subduction zone earthquake happened in 1700. More than 300 years of peace does not indicate safety. Geological evidence shows that the subduction zone earthquake has a recurrence rate of ~500 years. It has been silently amassing energy for the next earthquake. <strong>It will come again!</strong> Ground shaking and tsunami waves may wreck havoc on the shore.
+                </p>
+
+            </section>
         </section>
         <div style="text-align: center;">
           <svg xmlns="http://www.w3.org/2000/svg" width="3em" fill="currentColor" class="bi bi-chevron-down fs-1" viewBox="0 0 16 16">
@@ -243,6 +256,25 @@
       window.onload = function() {
         document.getElementById("loader").style.display = "none";
       };
+
+      //hide the navbar when scrolling down, show when scrolling up
+      let lastScrollTop = 0;
+      const navbar = document.querySelector('nav');
+
+      window.addEventListener('scroll', () => {
+        const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        if (scrollTop > lastScrollTop) {
+            navbar.classList.add('hide-nav');
+        } else {
+            navbar.classList.remove('hide-nav');
+            if (scrollTop > 150) {
+                navbar.classList.add("white-nav");
+            } else {
+                navbar.classList.remove("white-nav");
+            }
+        }
+        lastScrollTop = scrollTop;
+      });
     </script>
 
     <script>
